cmake_minimum_required(VERSION 3.25)
project(QtProjects)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(Controls)
add_subdirectory(DarkMode)
add_subdirectory(Multithreading)
add_subdirectory(TabWidget)
add_subdirectory(Signals)
add_subdirectory(Tests)
add_subdirectory(TestsAndExperiments)
add_subdirectory(Widgets)
